--- a/npcs/glem_the_durable_shill.yaml
+++ b/npcs/glem_the_durable_shill.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: middle aged adult
+    age: Middle Aged Adult
 
     #
     # Races (case insensitive):
@@ -187,7 +187,7 @@ npc:
     # Required.
     # Max length: ...
     #
-    race: half-halfiling/half-dwarf
+    race: Half-Halfiling/Half-Dwarf
 
     #
     # The sub-race can be anything.
@@ -261,7 +261,7 @@ npc:
     #
     # Required.
     #
-    subclass: Spy
+    subclass: Charlatan
 
     #
     # Class level.
@@ -464,58 +464,92 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Dexterity
+    - Charisma
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - Frightened and Poison
     skills:
-    - Dwarf Abilities:
-      - Dwarven Resistance: Has advantage on Saving Throws against poison, and has Resistance against poison damage
-        Dwarven Combat Training: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
-        Stonecunning: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
-                      instead of his normal Proficiency Bonus
-      Halfling Abilities:
-      - Lucky: When rolling a 1 on The D20 for an Attack roll, ability check, or saving throw, can reroll the die and must use the new roll
-        Brave: Has advantage on Saving Throws against being Frightened
-        Halfling Nimbleness: can move through the space of any creature that is of a size larger than her
-      Rogue Abilities:
-      - Expertise: Double proficiency bonus with Thieve's Tools and Sleight of Hand
-        Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
-        Cunning Action: Can tak a bonus action on each turn to Hide, Disengage or Dash
-        Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage 
-        Evasion: When you are subjected to an Effect that allows you to make a Dexterity saving throw to take only half damage, you instead take no damage if you succeed on the saving throw, and only half damage if you fail
-      Soulknife Abilities:
-      - Psionic Talents:
-        - Description: You can use your Psionic Talent die in the following ways - Psionic Talent Die is d8
-          Psi-Bolstered Knack: if you fail an ability check using a skill or tool with which you have proficiency, you can roll your Psionic Talent die and add the number rolled to the check, potentially
-                                 turning failure into success
-          Psychic Whisper:  As an action, you give yourself and at least one other creature the ability to speak telepathically with each other. When you do so, roll your Psionic Talent die, and choose
-                            creatures you can see, up to a number of creatures equal to the number rolled. For 1 hour, the chosen creatures can speak telepathically with you, and you can speak telepathically
-                            with them
-          Psi Replenishment: As a bonus action, you can calm your mind for a moment and restore your Psionic Talent die to its starting size. You then can’t use Psi Replenishment again until you finish a long
-                             rest
-          Psychic Blades: You can manifest your psionic power as shimmering blades of psychic energy. When you are about to make a melee or ranged weapon attack against a creature, you can manifest a psychic blade from your free
-                          hand and make the attack with that blade. This magic blade is a simple melee weapon with the finesse and thrown properties. It has a normal range of 60 feet and no long range, and on a hit, it deals
-                          psychic damage equal to 1d6 plus the ability modifier you used for the attack roll. The blade vanishes immediately after it hits or misses its target, and it leaves no mark on its target if it deals
-                          damage. After you attack with the blade, you can make a melee or ranged weapon attack with a second psychic blade as a bonus action on the same turn, provided your other hand is free to create it. The
-                          damage die of this bonus attack is 1d4, instead of 1d6.
-          Soul Blades: 
-          - Description: Your Psychic Blades are now an expression of your psi-suffused soul, giving you finer control over them in the following ways
-            Homing Strikes: If you make an attack roll with your Psychic Blades and miss the target, you can roll your Psionic Talent die and add the number rolled to the attack roll. If this causes the attack to
-                            hit, your Psionic Talent die decreases by one die size, regardless of the number rolled
-            Psychic Teleportation: If your Psionic Talent die is available, you can hurl your Psychic Blades to magically transport yourself to another location. As a bonus action, you manifest one of your Psychic
-                                   Blades and throw it at an unoccupied space you can see, up to a number of feet away equal to 5 times the highest number on your Psionic Talent die. You then teleport to that space,
-                                   the blade vanishes, and your Psionic Talent die decreases by one die size
+    - Forgery
+    proficiencies:
+    - Forgery Kit
+    - Perception
+    - Deception    
+    - Intimidation
+    - Persuasion
+    - Disguise Kit
+  special-abilities:
+  - title: Dwarf Abilities
+  - abilities: 
+    - title: Darkvision
+    - content: Can see in dim light within 60 feet as if it were bright light, and in Darkness as if it were dim light. Can’t discern color in Darkness, only Shades of Gray.
+    - title: Dwarven Resistance
+    - content: Has advantage on Saving Throws against poison, and has Resistance against poison damage
+    - title: Tool Proficiency
+    - content: You gain proficiency with the artisan's tools of your choice; smith's tools, brewer's supplies, or mason's tools.       
+    - title: Dwarven Combat Training
+    - content: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
+    - title: Stonecunning
+    - content: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
+               instead of his normal Proficiency Bonus
+  - title: Halfling Abilities
+  - abilities: 
+    - title: Lucky
+    - content: When rolling a 1 on The D20 for an Attack roll, ability check, or saving throw, can reroll the die and must use the new roll           
+    - title: Brave
+    - content: Has advantage on Saving Throws against being Frightened 
+    - title: Halfling Nimbleness
+    - content: Can move through the space of any creature that is of a size larger than her
+  - title: Rogue Abilities
+  - abilities: 
+    - title: Expertise
+    - content: Double proficiency bonus with Thieve's Tools and Sleight of Hand
+    - title: Sneak Attack
+    - content: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
+    - title: Cunning Action
+    - content: Can take a bonus action on each turn to Hide, Disengage or Dash
+    - title: Uncanny Dodge
+    - content: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage 
+    - title: Evasion
+    - content: When you are subjected to an Effect that allows you to make a Dexterity saving throw to take only half damage, you instead take no damage if you succeed on the saving throw, and only half damage if you fail
+  - title: Charlatan Abilities
+  - abilities: 
+    - title: Stage Magic
+    - content: You have learned the value(and application) of creative magical embellishments of your craft. You learn the minor illusion, prestidigitation and thaumaturgy cantrips. Charisma is your spellcasting ability 
+               for these cantrips.
+    - title: Parlour Trickery
+    - content: Your innate talent with mundane stage trickery allows you to enact convincing feints. You gain proficiency in the Sleight of Hand skill If you are already proficient in the skill you add double your 
+               proficiency bonus to checks you make with it. As a bonus action, you can begulle a creacutre you can see within 5 feet of you that can see you. Make a Dexterity (Sleight of Hand) check contested by the
+               target's Wisdom (Insight} check. On a success your next attack against the target has advantage until the end of the current turn.
+    - title: Theatricality and Deception
+    - content: You've learned how to create a disposable, albeit unstable alchemical device for use in your performances. Whenever you finish a short or long rest, you can create an alchemical capsule that
+               becomes inert after your next rest. As a bonus action, or as a reaction when you are attacked or are forced to make a saving throw, you can throw the capsule at a space within 30 feet of you
+               that doesn't have total cover from you. The capsule disintegrates there, producing one of the following effects of your choice
+               Smoke - Smoke spreads from the capsule in a 20-foot-radius sphere that moves around comers. The area of the smoke is heavily obscured and persists until the end of your next turn, or until a 
+                       strong wind disperses it
+               Fireworks - Each creature in a 10-foot-radius s phere of the capsule must succeed on a Constitution saving throw against a DC equal to 8 + your proficiency bonus + your Charisma modifier or 
+                           become blinded and deafened until the end of your next turn. 
+ 
+  - title: Attacks
+  - content: 1 attack 
+  - title: Combat Tactics
+  - content: Glem is quite courageous, but not foolhardy. He knows his limits. He will use his psionics to disorient opponents in order to calm a situation or make space to flee. If pressed, he will try negotiating before combat
 
-    special-abilities:
-    - Proficiencies: Disguise; Persuasion; Forgery Kit
-    attacks: |
-      1 attack with Soul Knife
-    combat-tactics: |
-      Glem is quite courageous, but not foolhardy. He knows his limits. He will use his psionics to disorient opponents in order to calm a situation or make space to flee. If pressed, he will try negotiating before combat
-    special-equipment:
-    - Gloves of Fast Draw: can teleport any item on your person to your hand. Attunement may be necessary. Grip the items you want to fast draw. Hold them the way you want them to appear in your hand and say the command word
-                            /"remember/". Any time after an item has been attuned it can be reflexively teleported to your hand. The item must be on your person for this to work.
-      Contraband Concealment Container: When this item is created the creator selects a material - spice, coin, or any other mundane material and a command word. The container has a seemingly endless source of whatever mundane
-                                        object is selected though it deteriorates from existence within a day of being removed from the container. When the command word is spoken and the container is opened it reveals completely
-                                        different contents. Stored in an extraplanar space the container may store any amount that would make sense for the size of the container and then by shutting the container the bag will
-                                        store the contents away until the command word is spoken again.
+  - title: Special Equipment
+  - abilities:
+    - title: Gloves of Fast Draw
+    - content: Gloves of fast draw can teleport any item on your person to your hand.
+               Attunement may be necessary. Grip the items you want to fast draw. Hold them the way you want them to appear in your hand, and say the command word "remember".
+               Any time after an item has been attuned, it can be reflexively teleported to your hand. Note - The item must be on your person for this to work.
+    - title: Contraband Concealment Container
+    - content: When this item is created the creator selects a material - spice, coin, or any other mundane material and a command word. The container has a seemingly endless source of whatever mundane
+               object is selected though it deteriorates from existence within a day of being removed from the container. When the command word is spoken and the container is opened it reveals completely
+               different contents. Stored in an extraplanar space the container may store any amount that would make sense for the size of the container and then by shutting the container the bag will
+               store the contents away until the command word is spoken again.
 
   profile:
 
