--- a/npcs/gothenni_vosk.yaml
+++ b/npcs/gothenni_vosk.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: middle aged adult
+    age: Middle Aged Adult
 
     #
     # Races (case insensitive):
@@ -464,48 +464,95 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Dexterity
+    - Intelligence
+    - Charisma
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - Necrotic
     skills:
-    - Aetherborn Abilities:
-      - Darkvision: can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray           
-        Born of Aether: You have resistance to necrotic damage
-        Menacing: You gain proficiency in the Intimidation skill
-        Vampiric Gift: An aetherborn with this gift gains the Drain Life ability, which is a natural attack that uses Strength for its attack and damage rolls, dealing 1d6 necrotic damage and restores the same number of hit
-                       points to the aetherborn. However, if the aetherborn goes for 7 days without dealing this damage, their hit point maximum is reduced by 1d6 per week. This reduction can’t be removed until the aetherborn
-                       has used their Drain Life ability and completed a long rest                                                
-      Rogue Abilities:
-      - Expertise: Double proficiency bonus with Thieve's Tools and Sleight of Hand
-        Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
-        Cunning Action: Can tak a bonus action on each turn to Hide, Disengage or Dash
-        Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage 
-        Evasion: When you are subjected to an Effect that allows you to make a Dexterity saving throw to take only half damage, you instead take no damage if you succeed on the saving throw, and only half damage if you fail
-        Reliable Talent: Whenever you make an ability check that lets you add your Proficiency Bonus, you can treat a d20 roll of 9 or lower as a 10.
-        Blindsense: if you are able to hear, you are aware of the Location of any hidden or Invisible creature within 10 feet of you
-        Slippery Mind: You gain proficiency in Wisdom Saving Throws
-        Elusive: No Attack roll has advantage against you while you aren't Incapacitated
-        Stroke of Luck: If your Attack misses a target within range, you can turn the miss into a hit. Alternatively, if you fail an ability check, you can treat The D20 roll as a 20
-      Mastermind Abilities:
-      - Master of Intrigue: you gain proficiency with the disguise kit, the forgery kit, and one gaming set of your choice. You also learn two languages of your choice. Additionally, you can unerringly mimic the speech patterns
-                            and accent of a creature that you hear speak for at least 1 minute, enabling you to pass yourself off as a native speaker of a particular land, provided that you know the language
-        Master of Tactics: you can use the Help action as a bonus action. Additionally, when you use the Help action to aid an ally in attacking a creature, the target of that attack can be within 30 feet of you, rather than
-                           5 feet of you, if the target can see or hear you
-        Insightful Manipulators: if you spend at least 1 minute observing or interacting with another creature outside combat, you can learn certain information about its capabilities compared to your own. The DM tells you if
-                                 the creature is your equal, superior, or inferior in regard to two of the following characteristics of your choice; Intelligence score, Wisdom score, Charisma score, Class levels (if any)
-                                 At the DM's option, you might also realize you know a piece of the creature's history or one of its personality traits, if it has any.
-        Misdirection: you can sometimes cause another creature to suffer an attack meant for you. When you are targeted by an attack while a creature within 5 feet of you is granting you cover against that attack, you can use
-                       your reaction to have the attack target that creature instead of you.
-        Soul of Deciet: your thoughts can't be read by telepathy or other means, unless you allow it. You can present false thoughts by making a Charisma (Deception) check contested by the mind reader's Wisdom (Insight) check.
-                        Additionally, no matter what you say, magic that would determine if you are telling the truth indicates you are being truthful if you so choose, and you can't be compelled to tell the truth by magic
+    - Personel Management
+    proficiencies:
+    - Survival
+    - Perception
+    - Deception    
+    - Intimidation
+    - Insight
+  special-abilities:
+  - title: Aetherborn Abilities
+  - abilities: 
+    - title: Darkvision
+    - content: Can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray           
+    - title: Born of Aether
+    - content: You have resistance to necrotic damage
+    - title: Menacing
+    - content: You gain proficiency in the Intimidation skill
+    - title: Vampiric Gift
+    - content: An aetherborn with this gift gains the Drain Life ability, which is a natural attack that uses Strength for its attack and damage rolls, dealing 1d6 necrotic damage and restores the same number of hit
+               points to the aetherborn. However, if the aetherborn goes for 7 days without dealing this damage, their hit point maximum is reduced by 1d6 per week. This reduction can’t be removed until the aetherborn
+               has used their Drain Life ability and completed a long rest                                                
+  - title: Rogue Abilities
+  - abilities: 
+    - title: Expertise
+    - content: Double proficiency bonus with Thieve's Tools and Sleight of Hand
+    - title: Sneak Attack
+    - content: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
+    - title: Cunning Action
+    - content: Can take a bonus action on each turn to Hide, Disengage or Dash
+    - title: Uncanny Dodge
+    - content: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage 
+    - title: Evasion
+    - content: When you are subjected to an Effect that allows you to make a Dexterity saving throw to take only half damage, you instead take no damage if you succeed on the saving throw, and only half damage if you fail
+    - title: Reliable Talent
+    - content: Whenever you make an ability check that lets you add your Proficiency Bonus, you can treat a d20 roll of 9 or lower as a 10.
+    - title: Blindsense
+    - content: if you are able to hear, you are aware of the Location of any hidden or Invisible creature within 10 feet of you
+    - title: Slippery Mind
+    - content: You gain proficiency in Wisdom Saving Throws
+    - title: Elusive
+    - content: No Attack roll has advantage against you while you aren't Incapacitated
+    - title: Stroke of Luck
+    - content: If your Attack misses a target within range, you can turn the miss into a hit. Alternatively, if you fail an ability check, you can treat The D20 roll as a 20
+  - title: Mastermind Abilities
+  - abilities: 
+    - title: Master of Intrigue
+    - content: You gain proficiency with the disguise kit, the forgery kit, and one gaming set of your choice. You also learn two languages of your choice. Additionally, you can unerringly mimic the speech patterns
+               and accent of a creature that you hear speak for at least 1 minute, enabling you to pass yourself off as a native speaker of a particular land, provided that you know the language
+    - title: Master of Tactics
+    - content: You can use the Help action as a bonus action. Additionally, when you use the Help action to aid an ally in attacking a creature, the target of that attack can be within 30 feet of you, rather than
+               5 feet of you, if the target can see or hear you
+    - title: Insightful Manipulators
+    - content: If you spend at least 1 minute observing or interacting with another creature outside combat, you can learn certain information about its capabilities compared to your own. The DM tells you if
+               the creature is your equal, superior, or inferior in regard to two of the following characteristics of your choice; Intelligence score, Wisdom score, Charisma score, Class levels (if any)
+               At the DM's option, you might also realize you know a piece of the creature's history or one of its personality traits, if it has any.
+    - title: Misdirection
+    - content: You can sometimes cause another creature to suffer an attack meant for you. When you are targeted by an attack while a creature within 5 feet of you is granting you cover against that attack, you can use
+               your reaction to have the attack target that creature instead of you.
+    - title: Soul of Deciet
+    - content: Your thoughts can't be read by telepathy or other means, unless you allow it. You can present false thoughts by making a Charisma (Deception) check contested by the mind reader's Wisdom (Insight) check.
+               Additionally, no matter what you say, magic that would determine if you are telling the truth indicates you are being truthful if you so choose, and you can't be compelled to tell the truth by magic
+   
+  - title: Attacks
+  - content: 1 attacks with Vampiric Gift
+  - title: Combat Tactics
+  - content: Avoids combat and will have his minions fight for him, but can definitely handle himself
 
-    special-abilities:
-    - Proficiencies: Survival, Intimidation, Perception, Insight   
-    attacks: |
-      1 attacks with Vampiric Gift
-    combat-tactics: |
-      Avoids combat and will have his minions fight for him, but can definitely handle himself
-    special-equipment:
-    - Cloak of Invisibility
-    - Boots of Elvinkind
-    - +3 Dagger
+  - title: Special Equipment
+  - abilities:
+    - title: Cloak of Invisibility
+    - content: While wearing this cloak, you can pull its hood over your head to cause yourself to become invisible. While you are invisible, anything you are carrying or wearing is invisible with you. You become visible when 
+               you cease wearing the hood. Pulling the hood up or down requires an action.
+               Deduct the time you are invisible, in increments of 1 minute, from the cloak's maximum duration of 2 hours. After 2 hours of use, the cloak ceases to function. For every uninterrupted period of 12 hours, the cloak
+               goes unused, it regains 1 hour of duration.
+    - title: Boots of Elvinkind
+    - content: While you wear these boots, your steps make no sound, regardless of the surface you are moving across. You also have advantage on Dexterity (Stealth) checks that rely on moving silently.
+    - title: Assassin's Dagger
+    - content: You gain a +3 bonus to attack and damage rolls made with this magic weapon. When you attack and hit a creature that is surprised with this dagger, it must make a DC 18 Constitution saving throw. On a failed save, 
+               the target takes an extra 4d6 damage from your attack.
 
   profile:
 
